-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5.0
-
None
-
-
ef27cc126 (dev), 4b362b5f4 (6.5), 55f89c76d (dev), 3fcc5a6e6 (6.5)
on mac with the 6.5.0 update I got this error:
2023-04-05T10:06:09.6205030Z [457/1273] Building OBJCXX object qtbase/src/gui/CMakeFiles/Gui.dir/platform/macos/qcocoanativeinterface.mm.o 2023-04-05T10:06:09.6305760Z FAILED: qtbase/src/gui/CMakeFiles/Gui.dir/platform/macos/qcocoanativeinterface.mm.o 2023-04-05T10:06:09.6411160Z $BUILD_PREFIX/bin/x86_64-apple-darwin13.4.0-clang++ -DENABLE_PIXMAN_DRAWHELPERS -DGL_SILENCE_DEPRECATION -DGui_EXPORTS -DMD4C_USE_UTF8 -DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_GUI_LIB -DQT_CORE_LIB -DQT_DBUS_LIB -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_UP_TO=0x050000 -DQT_EXPLICIT_QFILE_CONSTRUCTION_FROM_PATH -DQT_LEAN_HEADERS=1 -DQT_MOC_COMPAT -DQT_NO_AS_CONST=1 -DQT_NO_CAST_TO_ASCII -DQT_NO_DEBUG -DQT_NO_EXCEPTIONS -DQT_NO_FOREACH -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_USING_NAMESPACE -DQT_QPA_DEFAULT_PLATFORM_NAME=\"cocoa\" -DQT_USE_QSTRINGBUILDER -DQT_WARN_DEPRECATED_UP_TO=0x070000 -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -I$SRC_DIR/build_native/qtbase/src/gui/Gui_autogen/include -I$SRC_DIR/build_native/qtbase/include -I$SRC_DIR/build_native/qtbase/include/QtGui -I$SRC_DIR/qtbase/src/gui -I$SRC_DIR/build_native/qtbase/src/gui -I$SRC_DIR/qtbase/src/gui/../3rdparty/VulkanMemoryAllocator -I$SRC_DIR/build_native/qtbase/include/QtGui/6.5.0 -I$SRC_DIR/build_native/qtbase/include/QtGui/6.5.0/QtGui -I$SRC_DIR/qtbase/src/gui/../3rdparty/md4c -I$SRC_DIR/build_native/qtbase/include/QtCore -I$SRC_DIR/qtbase/mkspecs/macx-clang -I$SRC_DIR/build_native/qtbase/src/corelib -I$SRC_DIR/build_native/qtbase/include/QtCore/6.5.0 -I$SRC_DIR/build_native/qtbase/include/QtCore/6.5.0/QtCore -I$SRC_DIR/qtbase/src/3rdparty/harfbuzz-ng/include/harfbuzz -I$SRC_DIR/build_native/qtbase/include/QtDBus -isystem $BUILD_PREFIX/include -isystem $BUILD_PREFIX/include/freetype2 -isystem $BUILD_PREFIX/include/glib-2.0 -isystem $BUILD_PREFIX/lib/glib-2.0/include -x objective-c++ -DNDEBUG -O3 -std=c++17 -isysroot /Applications/Xcode_13.2.1.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX11.0.sdk -mmacosx-version-min=11.0 -fPIC -fvisibility=hidden -Wall -Wextra -fno-exceptions -fPIC -fapplication-extension -Winvalid-pch -Xclang -include-pch -Xclang $SRC_DIR/build_native/qtbase/src/gui/CMakeFiles/Gui.dir/cmake_pch.objcxx.hxx.pch -Xclang -include -Xclang $SRC_DIR/build_native/qtbase/src/gui/CMakeFiles/Gui.dir/cmake_pch.objcxx.hxx -MD -MT qtbase/src/gui/CMakeFiles/Gui.dir/platform/macos/qcocoanativeinterface.mm.o -MF qtbase/src/gui/CMakeFiles/Gui.dir/platform/macos/qcocoanativeinterface.mm.o.d -o qtbase/src/gui/CMakeFiles/Gui.dir/platform/macos/qcocoanativeinterface.mm.o -c $SRC_DIR/qtbase/src/gui/platform/macos/qcocoanativeinterface.mm 2023-04-05T10:06:09.6508000Z $SRC_DIR/qtbase/src/gui/platform/macos/qcocoanativeinterface.mm:4:10: fatal error: 'QtGui/private/qopenglcontext_p.h' file not found 2023-04-05T10:06:09.6609940Z #include <QtGui/private/qopenglcontext_p.h>
it was fine with 6.4.x
For Gerrit Dashboard: QTBUG-112656 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
470925,5 | Guard qopenglcontext_p.h with the QT_NO_OPENGL check | dev | qt/qtbase | Status: MERGED | +2 | 0 |
470989,2 | Guard qopenglcontext_p.h with the QT_NO_OPENGL check | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |
471077,3 | Guard qopenglcontext_p.h with QT_NO_OPENGL | dev | qt/qtbase | Status: MERGED | +2 | 0 |
471135,2 | Guard qopenglcontext_p.h with QT_NO_OPENGL | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |