Guard qopenglcontext_p.h with QT_NO_OPENGL

Fixes the macos build with the disabled opengl feature.
Include inttypes.h that used to be implicitly included by
qopenglcontext_p.h. It's needed for 'PRId64' macro.

Amends: ef27cc126c38ff14360bebeeb3100671df9e4cf4

Fixes: QTBUG-112656
Change-Id: I970329c4aacc70790f50e1ff3a57ab2aa6f6bff7
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>
(cherry picked from commit 55f89c76d93a1c328fa6628212db7bcff3dfcdbb)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>